# avoidance-2.0

./: .gitignore  CMakeLists.txt  build_wasm.sh  build_windows.sh  package.sh
src/: game.c  game.h  keys.c  keys.h  main.c  music.h  push.h  render.c  render.h  types.h
